aks-poland-central/apps/elixir-webrtc-nexus/nexus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus
  labels:
    app: nexus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexus
  template:
    metadata:
      labels:
        app: nexus
    spec:
      containers:
      - name: nexus
        image: megzo/elixir-webrtc-nexus
        command:
        - /app/bin/nexus
        - start
        ports:
        - name: http
          containerPort: 4000
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: nexus
  labels:
    app: nexus
spec:
  ports:
  - port: 4000
    targetPort: 4000
    protocol: TCP
    name: http
  selector:
    app: nexus
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: nexus-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - nexus.aks-poland-central.stunner.cc
    secretName: nexus-tls
  rules:
  - host: nexus.aks-poland-central.stunner.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nexus
            port:
              number: 4000
